--- a/aip.tex
+++ b/aip.tex
@@ -2549,8 +2549,8 @@ We now consider certain subgraphs of the directed sprouting graph, whose definit
    \Cref{fig: sprouting graph} shows the sprouting subgraph associated to the pair $(A,\vv{u})$ in our running example, initiated in \Cref{ex: ft}.
    As in \Cref{ex: ft.3}, we consider the case where $p$ is congruent to $11$ modulo a universal denominator for $A$.
    The overbar represents collapse along $\mf(A,\vv{u})$.
-   The figure shows $\S_{p^e}(A,\vv{u})$ for $1 \le e \le 4$, with $\sprout^*_p(A,\vv{u})$ shown in green.
-   The nodes shown in red are pairs that are not very small, which cause $\sprout^*_p(A,\vv{u})$ to terminate, as $\S_{p^e}(A,\vv{u})$ is empty for $e\ge 5$, and $\S_{p^e}^*(A,\vv{u})$ is empty for $e\ge 4$.
+   The figure shows $\S_{p^e}(A,\vv{u})$ for $1 \le e \le 4$, with $\sprout^*_p(A,\vv{u})$ highlighted in green.
+   The framed nodes highlighted in red are pairs that are not very small, which cause $\sprout^*_p(A,\vv{u})$ to terminate, as $\S_{p^e}(A,\vv{u})$ is empty for $e\ge 5$, and $\S_{p^e}^*(A,\vv{u})$ is empty for $e\ge 4$.
    % \daniel[inline]{So what is the critical exponent?  This has a denominator a power of $p$, because of terminal red points.  Does it have the kind of intermediary powers of $p$ what we don't see in our examples paper?}
    % \pedro[inline]{
    %    No intermediate powers here; the critical exponent is $\frac4{17}-\frac3{17 p^3}$.
