--- a/pictures/sprouting_graph.tex
+++ b/pictures/sprouting_graph.tex
@@ -8,7 +8,7 @@
       align=center,
       minimum width = .4cm,
       minimum height = .4cm,
-      fill = gray!30
+%      fill = gray!30
 %      fill = cyan!40
 %      fill = blue!50!white!80
    },
@@ -24,7 +24,9 @@
       align=center,
       minimum width = .4cm,
       minimum height = .4cm,
-      fill = red!70
+      fill = red!70,
+      draw={black},
+      ultra thick
    }
 }
 \tikzstyle{level 1}=[level distance=2cm, sibling distance=3.5cm]
